[package]
name = "madoka"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.3", features = ["derive"] }
hyper = { version = "1.3.1", features = ["full"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_yaml = "0.9.25"
tokio = { version = "1.32.0", features = ["full"] }
hyper-util = { git = "https://github.com/hyperium/hyper-util.git" }
http-body-util = "0.1.0-rc.3"
bytes = "1.5.0"
hyper-staticfile = "0.9.5"
mime_guess = "2.0.4"
log = "0.4.20"
env_logger = "0.10.0"
